Finish HTML and styles.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       *board sizing options
       -->
       <div class="container-buttons-size-gird">
+        <label>Grid size</label>
         <button class="button-sixteen">16 x 16</button>
         <button class="button-thirty-two">32 x 32</button>
         <button class="button-sixty-four64x64">64 x 64</button>
@@ -41,10 +42,10 @@
         <button id="button-progressive-darkening" class="button-progressive-darkening">Progressive darkening</button>
         <button id="button-progressive-lightening" class="button-progressive-lightening">Progressive lightening</button>
       </div>
-      <div class="container-clear-grid">
+      <div class="container-clear-grid" id="container-clear-grid">
         <button id="button-clear-grid" class="button-clear-grid">Clear grid</button>
       </div>
-      <div class="container-hide-lines">
+      <div class="container-hide-lines" id="container-hide-lines">
         <button id="button-hide-lines" class="button-hide-lines">Hide lines</button>
       </div>
     </div>
