Commit prior to function remodelling in which I am going to separate the mode assignment variable with the code handler.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <label for="button-static-color">Brush</label>
         <input type="color" id="button-static-color" class="button-static-color">
         <button id="button-rainbow" class="button-rainbow">Rainbow</button>
-        <button id="button-progressive-darkening" class="button-progressive-darkening">Progressive darkening</button>
-        <button id="button-progressive-lightening" class="button-progressive-lightening">Progressive lightening</button>
+        <button id="button-darkness" class="button-darkness">Progressive darkening</button>
+        <button id="button-brightness" class="button-brightness">Progressive lightening</button>
       </div>
 
       <div class="container-clear-grid" id="container-clear-grid">
