Do eraser and clear.

--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
 
       <div class="container-background">
         <label for="button-background-color">Background</label>
-        <input type="color" id="button-background-color" class="button-background-color">
+        <input type="color" id="button-background-color" class="button-background-color" value="#ffffff">
       </div>
 
       <div class="container-brush">
         <label for="button-static-color">Brush</label>
         <input type="color" id="button-static-color" class="button-static-color">
         <button id="button-rainbow" class="button-rainbow">Rainbow</button>
-        <button id="button-darkness" class="button-darkness">Progressive darkening</button>
-        <button id="button-brightness" class="button-brightness">Progressive lightening</button>
+        <button id="button-eraser" class="button-eraser">Eraser</button>
       </div>
 
       <div class="container-clear-grid" id="container-clear-grid">
