Add show lines function.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <label>Grid size</label>
         <button class="button-sixteen button-size" id="button-sixteen" data-size="16">16 x 16</button>
         <button class="button-thirty-two button-size" id="button-thirty-two" data-size="32">32 x 32</button>
+        <button class="button-forty-eight button-size" id="button-forty-eight" data-size="48">48 x 48</button>
         <button class="button-sixty-four button-size" id="button-sixty-four" data-size="64">64 x 64</button>
+        <button class="button-eighty button-size" id="button-eighty" data-size="80">80 x 80</button>
+        <button class="button-ninety-six button-size" id="button-ninety-six" data-size="96">96 x 96</button>
       </div>
 
       <div class="container-background">
